--- a/Serviz-Frontend/index.html
+++ b/Serviz-Frontend/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="/src/index.css" rel="stylesheet">
-    <title>serviz-frontend</title>
+    <link rel="shortcut icon" href="/public/logo.png" type="image/x-icon">
+    <title>Serviz - Services, Simplified</title>
   </head>
   <body>
     <div id="root"></div>
